<resources>
    <string name="app_name">TimeProject</string>
    <string-array name="GroupNames">
        <item>Группа 1</item>
        <item>Семья</item>
        <item>Друзья</item>
    </string-array>
    <string name="nameOfTheEvent_text">Название</string>
    <string name="time_start_text">Время начала</string>
    <string name="time_end_text">Время окончания</string>
    <string name="time_description_text">Описание</string>
    <string name="profile_button">Профиль</string>
    <string name="settings_button">Настройки</string>
    <string name="guide_button">Инструкция</string>
    <string name="profile_bg">Фон профиля</string>
    <string name="settings_bg">Фон настроек</string>
    <string name="guide_bg">Фон инструкции</string>
    <string name="add_button">Добавить занятость</string>
    <string name="guide_text">         Данное приложение создано для того, чтобы делиться расписанием.\n\n        Для того чтобы начать пользоваться приложением, зарегестрируйтесь на странице профиля. Если у вас уже есть аккаунт, зайдите в него на той же странице.\n\n        На вкладке профиля находится список друзей. Добавьте человека в этот список посредством введения его юзернейма в посиковую строку и отправления запроса в друзья. Свой юзернейм можно найти на вкладке профиля.\n\n        Нажав на определённую дату, можно увидеть планы и расписание людей на этот день.\n\n        Чтобы увидеть расписание не всех людей из списка друзей, а только некоторых, нужно выбрать группу отображаемых пользователей. Настроить группы можно на вкладке профиля.</string>

    <string name="radioEveryDay">Каждый день</string>
    <string name="radioWorkDays">В будние</string>
    <string name="radioThisDay">В эту дату</string>

    <string name="email_text">Email</string>
    <string name="name_text">Имя</string>
    <string name="password_text">Пароль</string>
    <string name="confirm_password_text">Подтвердить пароль</string>
    <string name="login_btn_text">Войти</string>
    <string name="register_btn_text">Зарегистрироваться</string>

    <string name="password_not_equals_confirmed">Пароли не совпадают</string>
    <string name="email_invalid">Некорректная почта</string>
    <string name="email_exists">Аккаунт с данной почтой уже существует</string>


</resources>