<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingScheduleActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/nameOfTheEvent_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTimeStart"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/time_start_text"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextTimeEnd"
        android:layout_width="242dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/time_end_text"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimeStart" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="360dp"
        android:layout_height="148dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/time_description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimeEnd" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="33dp"
        android:clickable="true"
        android:contentDescription="@string/add_button"
        android:onClick="AddToSchedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <RadioGroup
        android:id="@+id/radioGroupOccure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonEveryDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/radioEveryDay"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="28dp" />

        <RadioButton
            android:id="@+id/radioButtonWorkDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/radioWorkDays"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="28dp" />
        <RadioButton
            android:id="@+id/radioButtonWeekends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="В выходные"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="28dp" />
        <RadioButton
            android:id="@+id/radioButtonAfterWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Каждую неделю"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="28dp" />


    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>